compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__panic__panic_as.snap
---
source: compiler-core/src/erlang/tests/panic.rs
expression: "\npub fn main() {\n  panic as \"wibble\"\n}\n"
---
----- SOURCE CODE

pub fn main() {
  panic as "wibble"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> any().
main() ->
    erlang:error(#{gleam_error => panic,
        message => <<"wibble"/utf8>>,
        file => <<?FILEPATH/utf8>>,
        module => <<"my/mod"/utf8>>,
        function => <<"main"/utf8>>,
        line => 3}).
